feat: add MIME type filter to extracted files tab (#200)
* feat: add export report to compare network topology page

Adds a Download Report button to the Compare Topology page that
generates a PDF with a comparison overview table, combined security
findings across all files, and the merged topology diagrams.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>

* fix/compare-report-null-guard-host-count-filename-length

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>

* feat: add MIME type filter to extracted files tab

Adds a collapsible filter panel to the Extracted Files page with pill-based
MIME type filtering, matching the conversation tab's filter UX. The file count
badge shows filtered/total when a filter is active.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>

* fix/compare-report-service-cleanup-unused-symbols-and-safe-split

---------

Co-authored-by: Claude Sonnet 4.6 <noreply@anthropic.com>